--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,129 @@
+:root {
+    --strong-cyan: hsl(172, 67%, 45%);
+    --very-light-grayish-cyan: hsl(189, 41%, 97%);
+    --very-dark-cyan: hsl(183, 100%, 15%);
+    --dark-grayish-cyan: hsl(186, 14%, 43%);
+    --grayish-cyan: hsl(184, 14%, 56%);
+    --light-grayish-cyan: hsl(185, 41%, 84%);
+    --white: hsl(0, 0%, 100%);
+
+    --font-size-input: 24px;
+
+    --weight: 700;
+
+    --font-family: 'Space mono', monospace;
+
+    --font-size: 10px;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+html {
+    font-size: var(--font-size);
+    font-family: var(--font-family);
+}
+
 body {
-    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--font-family);
+    background-color: var(--light-grayish-cyan);
+}
+
+header {
+    margin: 40px 0;
+}
+
+main {
+    width: 100%;
+    height: calc(100% - 90px);
+    padding: 35px 30px;
+    font-size: 1.5rem;
+    border-radius: 30px 30px 0 0;
+    background-color: var(--white);
+}
+
+main section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.inputs-section div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.inputs-section div span {
+    font-weight: bold;
+    color:hsl(186, 14%, 43%);
+}
+
+.inputs-section div label {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5px 0;
+    padding: 10px 15px;
+    background-color: var(--very-light-grayish-cyan);
+    border-radius: 7px;
+}
+
+.inputs-section div label input {
+    width: 90%;
+    height: 100%;
+    color: var(--very-dark-cyan);
+    font-family: var(--font-family);
+    font-size: 2.5rem;
+    font-weight: var(--weight);
+    text-align: right;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.inputs-section div label img{
+    width: 15px;
+    height: 15px;
+}
+
+.inputs-section .select-container div button{
+    width: calc(50% - 7px);
+    height: 5rem;
+    color: var(--white);
+    font-family: var(--font-family);
+    font-size: 2.5rem;
+    font-weight: var(--weight);
+    background-color: var(--very-dark-cyan);
+    border: none;
+    outline: none;
+    border-radius: 7px;
+}
+
+#btn-custom {
+    color:hsl(186, 14%, 43%);
+    background-color: var(--very-light-grayish-cyan);
+}
+
+.inputs-section .select-container div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 14px;
+    margin: 5px 0;
 }
