--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ html {
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -46,7 +46,7 @@ main {
     width: 100%;
     height: calc(100% - 90px);
     padding: 35px 30px;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     border-radius: 30px 30px 0 0;
     background-color: var(--white);
 }
@@ -126,4 +126,65 @@ main section {
     flex-wrap: wrap;
     gap: 14px;
     margin: 5px 0;
+}
+
+.outputs-section {
+    justify-content: space-between;
+    height: 250px;
+    margin-top: 30px;
+    padding: 25px;
+    background-color: var(--very-dark-cyan);
+    border-radius: 15px;
+}
+
+.outputs-container {
+    width: 100%;
+}
+
+.outputs-container .output {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.output .text span{
+    display: block;
+    font-weight: 600;
+}
+
+.output .text span:first-child {
+    font-size: 1.5rem;
+    color: var(--white);
+}
+
+.output .text span:last-child {
+    font-size: 1.3rem;
+    color: var(--grayish-cyan);
+}
+
+.output .output-value {
+    font-size: 3rem;
+    font-weight: var(--weight);
+    color: var(--strong-cyan);
+}
+
+.reset-container {
+    width: 100%;
+    height: 50px;
+    display: flex;
+
+}
+
+.reset-container .btn-reset {
+    width: 100%;
+    height: 5rem;
+    color: var(--);
+    font-family: var(--font-family);
+    font-size: 2rem;
+    font-weight: var(--weight);
+    background-color: var(--strong-cyan);
+    border: none;
+    outline: none;
+    border-radius: 7px;
 }
