--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ main section {
 .reset-container .btn-reset {
     width: 100%;
     height: 5rem;
-    color: var(--);
+    color: var(--very-dark-cyan);
     font-family: var(--font-family);
     font-size: 2rem;
     font-weight: var(--weight);
